src/test/ui/consts/const-match-check.eval2.stderr
error[E0005]: refutable pattern in local binding: `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered
  --> $DIR/const-match-check.rs:31:24
   |
LL |     let x: [i32; { let 0 = 0; 0 }] = [];
   |                        ^ patterns `std::i32::MIN..=-1i32` and `1i32..=std::i32::MAX` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
